# PySERA

./: .gitignore  .gitmodules  Configurations.py  Debugging.txt  Extracted_features_with_configuration_A.xlsx  Extracted_features_with_configuration_C.xlsx  Extracted_features_with_configuration_D.xlsx  INSTALL.md  LICENSE  MANIFEST.in  README.md  Supplemental_File_1.xlsx  build.sh  dev_setup.sh  dev_test.py  development_report.md  environment.yml  pyproject.toml  radiomics_standalone.py  requirements-library.txt  requirements.txt  setup.py
Feature Names and Benchmarks/NEW/: Extracted_features_with_configuration_B.xlsx  Extracted_features_with_configuration_E.xlsx
Feature Names and Benchmarks/OLD/: SERA features compliance check with IBSI.xlsx
IBSI_Evaluation/IBSI_Feature_Names_and_Benchmarks/: IBSI_Configurations.py
IBSI_Evaluation/IBSI_Feature_Names_and_Benchmarks/IBSI_Features/: Configuration_A_All_extracted_features_OPTIMIZED_preprocessed_sequential_image.xlsx  Configuration_A_All_extracted_features_OPTIMIZED_preprocessed_sequential_image_08-19-2025_012657.xlsx  Configuration_B_All_extracted_features_OPTIMIZED_preprocessed_sequential_image.xlsx  Configuration_B_All_extracted_features_OPTIMIZED_preprocessed_sequential_image_08-19-2025_013646.xlsx  Configuration_C_All_extracted_features_OPTIMIZED_preprocessed_sequential_image.xlsx  Configuration_C_All_extracted_features_OPTIMIZED_preprocessed_sequential_image_08-19-2025_014349.xlsx  Configuration_D_All_extracted_features_OPTIMIZED_preprocessed_sequential_image.xlsx  Configuration_D_All_extracted_features_OPTIMIZED_preprocessed_sequential_image_08-19-2025_014925.xlsx  (+5 more)
SERA/: Main.py  Quantization.py  README.MD  RF_main.py  SERASUVscalingObj.py  SERAutilities.py  Sera_Filter.py  Sera_Fusion.py  Sera_RF.py  Sera_ReadWrite.py  Sera_Registration.py  Test_of_Intensity_histogram.py  getGLCMFeatures.py  getGLDZMFeatures.py  getGLRLMFeatures.py  getGLSZMFeatures.py  getHist.py  getIntVolHist.py  getMIFeatures.py  getMorph.py  getNGLDMFeatures.py  getNGTDMFeatures.py  getSUVpeak.py  getStats.py  interpolation.py  prepareVolume.py  readme.md  view_functions.py
SERA/dicom2nifti/: __init__.py  common.py  compressed_dicom.py  convert_dicom.py  convert_dir.py  convert_ge.py  convert_generic.py  convert_hitachi.py  convert_philips.py  convert_siemens.py  exceptions.py  image_reorientation.py  image_volume.py  patch_pydicom_encodings.py  resample.py  settings.py
library_examples/: basic_usage.py
pysera/: __init__.py  _cli.py
pysera/cli/: argument_parser.py
pysera/config/: settings.py
pysera/data/: __init__.py  data_loader.py  dicom_loader.py
pysera/engine/visera/: Main.py  (+23 more)
pysera/features/: __init__.py  feature_names.py
pysera/preprocessing/: __init__.py  data_preprocessing.py  intensity_preprocessing.py  roi_preprocessing.py
pysera/processing/: __init__.py  radiomics_processor.py  synthesize_RoIs.py
pysera/utils/: __init__.py  file_utils.py  helpers.py  log_logging.py  log_record.py  mock_modules.py  save_params.py  utils.py
src/: Quantization.py  RF_main.py  SERAutilities.py  Sera_RF.py  getGLDZMFeatures.py  getGLRLMFeatures.py  getHist.py  getIntVolHist.py  getMorph.py  getStats.py  prepareVolume.py  view_functions.py
(+32 files in other folders)
